--- a/scss/blocks/_how-it-works.scss
+++ b/scss/blocks/_how-it-works.scss
@@ -26,30 +26,30 @@
     position: relative;
     z-index: 1;
     counter-increment: item;
-}
-.how-it-works__item:not(:last-child):before {
-    width: 100%;
-    height: 1px;
-    position: absolute;
-    z-index: 1;
-    top: -82px;
-    display: block;
-    background-color: #fdd6ba;
-    content: '';
-}
-.how-it-works__item::after {
-    width: 31px;
-    height: 31px;
-    position: absolute;
-    z-index: 1;
-    top: calc(-82px - 15px);
-    background-color: #FEFCF7;
-    border: 1px solid #0E8784;
-    border-radius: 50%;
-    content: '';
-}
-.how-it-works__item:not(:last-child){
-    padding-right: 95px;
+    &:not(:last-child):before {
+        width: 100%;
+        height: 1px;
+        position: absolute;
+        z-index: 1;
+        top: -82px;
+        display: block;
+        background-color: #fdd6ba;
+        content: '';
+    }
+    &::after {
+        width: 31px;
+        height: 31px;
+        position: absolute;
+        z-index: 1;
+        top: calc(-82px - 15px);
+        background-color: #FEFCF7;
+        border: 1px solid #0E8784;
+        border-radius: 50%;
+        content: '';
+    }
+    &:not(:last-child){
+        padding-right: 95px;
+    }
 }
 .how-it-works__item-heading{
     max-width: 25px;
@@ -60,16 +60,16 @@
     line-height: 36px;
     font-weight: 900;
     color: #333D4B;
-}
-.how-it-works__item-heading::before{
-    display: block;
-    margin-bottom: 38px;
-    font-family: 'Fraunces';
-    font-weight: 900;
-    font-size: 72px;
-    line-height: 72px;
-    color: #FDD6BA;
-    content: '0' counter(item);
+    &::before{
+        display: block;
+        margin-bottom: 38px;
+        font-family: 'Fraunces';
+        font-weight: 900;
+        font-size: 72px;
+        line-height: 72px;
+        color: #FDD6BA;
+        content: '0' counter(item);
+    }
 }
 @media only screen and (max-width: 768px){
     .how-it-works__item-heading{
